Deteled option in sort menu. max-width and text overflow ellipsis in media caption to stop hidding of heart when media title is too long

--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -106,6 +106,13 @@ figure{
    display: flex;
  }
 
+ .photo-details{
+  max-width: 320px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+ }
+
 @media screen and (max-width: 1160px) {
 
   #photographer-images {
